--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="on_boarding_dialog_title">Добро пожаловать!</string>
     <string name="on_boarding_dialog_description">
         Это приложение написано для студентов заочной формы обучения, учащихся 82, 83, 84 группы факультета предпринимательства и управления Белорусского Государственного
-        аграрно технического университета.
+        аграрно технического университета.\nОбратите внимание\nВся информация в приложении представлена исключительно в ознакомительных целях и предоставляется как есть.
     </string>
 
     <!--shortcut -->
