--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,23 @@
     <string name="share_popup">Поделиться</string>
     <string name="on_boarding_dialog_title">Добро пожаловать!</string>
     <string name="on_boarding_dialog_description">
-        Это приложение написано для студентов заочной формы обучения, учащихся 82, 83, 84 группы факультета предпринимательства и управления Белорусского Государственного
-        аграрно технического университета.\nОбратите внимание\nВся информация в приложении представлена исключительно в ознакомительных целях и предоставляется как есть.
+         <![CDATA[
+         Это приложение написано для студентов заочной формы обучения, учащихся 82, 83, 84
+         группы факультета предпринимательства и управления Белорусского Государственного
+         аграрно технического университета.
+         <br>
+         <strong>
+         Обратите внимание!
+         </strong>
+         <br>
+         Вся информация в приложении представлена
+         <strong>
+         исключительно
+         </strong>
+         в ознакомительных целях и предоставляется
+         <strong>
+         как есть
+         </strong>.]]>
     </string>
 
     <!--shortcut -->
@@ -21,7 +36,7 @@
     <string name="shortcut_dashboard">Информация</string>
     <string name="shortcut_notification">Звонки</string>
 
-    
+
     <string name="no_server_response">Нет ответа от сервера</string>
     <string name="checkYourURLConnection">Возможно у вас отсуствует соединение либо сервер не отвечает.\nПовторите попытку позже</string>
     <string name="refresh_data">Обновить</string>
